[package]
name = "rcdda"
version = "0.1.0"
authors = ["Bartosz Nowak <sztosz@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.0"
serde = {version = "1.0.99", features = ["derive"]}
serde_json = "1.0.40"
specs = "0.15.0"
specs-derive = "0.4.0"

[dependencies.sdl2]
version = "0.32.2"
default-features = false
features = ["image"]
